# autoresearch-macro

./: .gitignore  .markdownlint.json  CLAUDE.md  CONTEXT.md  DESIGN.md  EXPERIMENT-1.md  MACROLAB-INTEGRATION.md  METHODOLOGY.md  PREPARE-SPEC.md  README.md  ROADMAP.md  STATUS.md  WEBAPP-PLAN.md  log.md  program.md  pyproject.toml
audit/: cross_check_paper.py  discrepancy_report.md
configs/: best_canada.json  best_config.json  best_norway.json  best_sweden.json  blind_best_config.json  blind_best_noft.json  cfg_55lqvqvr.json  cfg__rgx6njb.json  cfg__x1vvjrs.json  cfg_b1x0su8y.json  cfg_do2v5h4m.json  cfg_kasj9tx9.json  cfg_m6myko5p.json  cfg_mexdma0o.json  manual_economist_benchmarks.yaml  publication_lags.yml  search_space.yml  sweden_lost_informed.json
metadata/: canada_target_decision.md  partner_activity_mapping.csv  sweden_target_notes.md  variable_catalog.csv
paper/: Makefile  REVISION-PLAN-1.md  REVISION-PLAN-2.md  REVISION-PLAN-3.md  REVISION-PLAN-4.md  main.tex  references.bib
prompts/: blind.md  informed_canada.md  informed_norway.md  informed_sweden.md
results/: ablation_results.json  random_search_log.txt  search_log.jsonl  search_log_blind.jsonl  search_state.json  search_state_blind.json
scripts/: ablation_analysis.py  build_live_forecasts_json.py  build_macrolab_manifest.py  generate_figures.py  publish_live_to_remote.sh  publish_to_macrolab.sh  refresh_and_publish_live.sh  run_economist_benchmark.py  run_leave_one_out_ablation.py  subperiod_analysis.py  verify_norges_bank.py  verify_ssb_tables.py
src/: baselines.py  build_forecast_errors.py  (+12 more)
(+62 files in other folders)
