[project]
name = "autoresearch-macro"
version = "0.1.0"
description = "Automated feature engineering for macroeconomic forecasting"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
    "fredapi>=0.5",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "numpy>=1.26,<2.2",
    "scipy>=1.11,<1.15",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "anthropic>=0.40",
    "transformers>=4.57.6",
    "peft>=0.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
ml = [
    "chronos-forecasting>=2.1.0",
    "autogluon.timeseries>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99
